--- a/app/keys/readme
+++ b/app/keys/readme
@@ -1,3 +1,3 @@
-Cloudmersive        REQUIRED | Available in key_cloudmersive.txt
+Pixabay             REQUIRED | Available in key_pixabay.txt
+Clarifai            REQUIRED | Available in key_clarifai.txt
 Unsplash            REQUIRED | Available in key_unsplash.txt
-Merriam-Webster     REQUIRED | Available in key_merriam-webster.txt
